--- a/100 Days of coding.ipynb
+++ b/100 Days of coding.ipynb
@@ -67,14 +67,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter any number between 1 and 10056\n",
-      "56 Battery street\n",
+      "Enter any number between 1 and 10098\n",
+      "98 Battery street\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "number = int(input(\"Enter any number between 1 and 100\"))\n",
+    "number = int(input(\"Enter any number between 1 and 100 \\n\"))\n",
     "print(\"{:d} Battery street\\n\".format(number))"
    ]
   },
@@ -88,9 +88,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your name? brianbr\n",
-      "brianbr\n",
-      "your name is 7 letters long\n"
+      "What is your name? brian\n",
+      "brian\n",
+      "your name is 5 letters long\n"
      ]
     }
    ],
@@ -143,9 +143,9 @@
       "nairobi\n",
       "you come from nairobi\n",
       "Enter the name of your pet? \n",
-      "yry\n",
-      "your pet is called yry\n",
-      "Your Band name is nairobi yry\n"
+      "nri\n",
+      "your pet is called nri\n",
+      "Your Band name is nairobi nri\n"
      ]
     }
    ],
@@ -176,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type a two digit number: 45\n",
-      "9\n"
+      "Type a two digit number: 76\n",
+      "13\n"
      ]
     }
    ],
@@ -214,9 +214,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your height in m: 1.659\n",
-      "Enter your weight in kg: 78\n",
-      "Your BMI is 28\n"
+      "Enter your height in m: 1.89\n",
+      "Enter your weight in kg: 75\n",
+      "Your BMI is 20\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "0f0acaf3",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "0552187f",
    "metadata": {},
    "outputs": [
@@ -270,8 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your current age? 42\n",
-      "You have 17520 days, 2496 weeks and 576 months left\n"
+      "What is your current age? 45\n",
+      "You have 16425 days, 2340 weeks and 540 months left\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "5c04b7c2",
    "metadata": {},
    "outputs": [
@@ -313,12 +313,12 @@
      "text": [
       "Welcome to the tip calculator.\n",
       "What was the total bill? \n",
-      "$150\n",
+      "$1786.9\n",
       "What percentage tip would you like to give? 10, 12, or 15? \n",
-      "12\n",
+      "10\n",
       "How many people to split the bill? \n",
-      "5\n",
-      "Each person should pay: $ 33.60\n"
+      "7\n",
+      "Each person should pay: $ 280.80\n"
      ]
     }
    ],
@@ -345,9 +345,482 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26d4dd5f",
+   "metadata": {},
+   "source": [
+    "###### If Else Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2dfee16f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the rollercoaster!\n",
+      "What is your height in cm? \n",
+      "149\n",
+      "What is your age? 11\n",
+      "Please pay $5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Roller coaster Ride\n",
+    "# print(\"Welcome to the rollercoaster!\")\n",
+    "# height = int(input(\"What is your height in cm? \\n\"))\n",
+    "\n",
+    "# if height >= 120:\n",
+    "#     print(\"You can ride whohoo!\")\n",
+    "# else:\n",
+    "#     print(\"Go eat some auxins!\")\n",
+    "\n",
+    "# Rollercoaster with more conditions\n",
+    "# >> Nested If statement\n",
+    "print(\"Welcome to the rollercoaster!\")\n",
+    "height = int(input(\"What is your height in cm? \\n\"))\n",
+    "\n",
+    "if height >= 120:\n",
+    "    age = int(input(\"What is your age? \"))\n",
+    "    if age > 18:\n",
+    "        print(\"Please pay $12\")\n",
+    "    elif age >= 12 and age <= 18:\n",
+    "        print(\"Please pay $7\")\n",
+    "    else:\n",
+    "        print(\"Please pay $5\")\n",
+    "else:\n",
+    "    print(\"Go eat some auxins!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3102f7a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to digit checker!\n",
+      "Which number do you want to check?120\n",
+      "Even Number!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Odd or Even\n",
+    "print(\"Welcome to digit checker!\")\n",
+    "number = int(input(\"Which number do you want to check?\"))\n",
+    "\n",
+    "res = number % 2\n",
+    "if res == 0:\n",
+    "    print(\"Even Number!\")\n",
+    "else:\n",
+    "    print(\"This is odd!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2ddb4a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter your height in m: 1.80\n",
+      "enter your weight in kg: 76\n",
+      "Your BMI is 23, you have a normal weight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BMI 2.0\n",
+    "# 🚨 Don't change the code below 👇\n",
+    "height = float(input(\"enter your height in m: \"))\n",
+    "weight = float(input(\"enter your weight in kg: \"))\n",
+    "# 🚨 Don't change the code above 👆\n",
+    "\n",
+    "#Write your code below this line 👇\n",
+    "res = weight / (height) ** 2\n",
+    "\n",
+    "BMI = round(res)\n",
+    "if BMI < 18.5:\n",
+    "    print(f\"Your BMI is {BMI}, you are underweight.\")\n",
+    "elif BMI < 25:\n",
+    "    print(f\"Your BMI is {BMI}, you have a normal weight.\")\n",
+    "elif BMI < 30:\n",
+    "    print(f\"Your BMI is {BMI}, you are slightly overweight.\")\n",
+    "elif BMI < 35:\n",
+    "    print(f\"Your BMI is {BMI}, you are obese.\")\n",
+    "else:\n",
+    "    print(f\"Your BMI is {BMI}, you are clinically obese.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bd2a29c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which year do you want to check? 2022\n",
+      "Not leap year.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Leap Year\n",
+    "# 🚨 Don't change the code below 👇\n",
+    "year = int(input(\"Which year do you want to check? \"))\n",
+    "# 🚨 Don't change the code above 👆\n",
+    "\n",
+    "#Write your code below this line 👇\n",
+    "if year % 4 == 0:\n",
+    "    if year % 100 == 0:\n",
+    "        if year % 400 == 0:\n",
+    "            print(\"Leap year.\")\n",
+    "        else:\n",
+    "            print(\"Not leap year.\")\n",
+    "    else:  \n",
+    "        print(\"Leap year.\")\n",
+    "else:\n",
+    "    print(\"Not leap year.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "efabdaba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the rollercoaster!\n",
+      "What is your height in cm? \n",
+      "178\n",
+      "What is your age? 12\n",
+      "Youth tickets are $7\n",
+      "Do you want a photo taken? Y or N. \n",
+      "N\n",
+      "Please pay $7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Roller coaster 2.0\n",
+    "print(\"Welcome to the rollercoaster!\")\n",
+    "height = int(input(\"What is your height in cm? \\n\"))\n",
+    "\n",
+    "bill = 0\n",
+    "if height >= 120:\n",
+    "    age = int(input(\"What is your age? \"))\n",
+    "    if age > 18:\n",
+    "        bill = 12\n",
+    "        print(\"Adult tickest are $12\")\n",
+    "    elif age >= 12 and age <= 18:\n",
+    "        bill = 7\n",
+    "        print(\"Youth tickets are $7\")\n",
+    "    else:\n",
+    "        bill = 5\n",
+    "        print(\"Child tickets are $5\")\n",
+    "    \n",
+    "    wants_photo = input(\"Do you want a photo taken? Y or N. \\n\")\n",
+    "    if wants_photo == 'Y':\n",
+    "       bill += 3\n",
+    "       print(f\"Please pay ${bill}\")\n",
+    "    else:\n",
+    "        bill\n",
+    "        print(f\"Please pay ${bill}\")\n",
+    "else:\n",
+    "    print(\"Go eat some auxins!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c808299",
+   "metadata": {},
+   "source": [
+    "###### Pizza Order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0a335d87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Python Pizza Deliveries!\n",
+      "Whta size of pizza do you want? S, M, or L \n",
+      "M\n",
+      "Do you want pepperoni? Y or N \n",
+      "Y\n",
+      "Do you want extra cheese? Y or N \n",
+      "Y\n",
+      "please pay 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welcome to Python Pizza Deliveries!\")\n",
+    "size = input(\"Whta size of pizza do you want? S, M, or L \\n\")\n",
+    "add_pepperoni = input(\"Do you want pepperoni? Y or N \\n\")\n",
+    "extra_cheese = input(\"Do you want extra cheese? Y or N \\n\")\n",
+    "\n",
+    "bill = 0\n",
+    "\n",
+    "if size == \"S\":\n",
+    "    bill += 15\n",
+    "elif size == \"M\":\n",
+    "    bill += 20\n",
+    "else:\n",
+    "    bill += 25\n",
+    "if add_pepperoni == \"Y\":\n",
+    "    if size == \"S\":\n",
+    "        bill += 2\n",
+    "    else:\n",
+    "        bill += 3\n",
+    "if extra_cheese == \"Y\":\n",
+    "    bill += 1\n",
+    "else:\n",
+    "    bill\n",
+    "print(f\"please pay {bill}\")\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "169a1535",
+   "metadata": {},
+   "source": [
+    "###### Logical Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b9c2c890",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the rollercoaster!\n",
+      "What is your height in cm? \n",
+      "178\n",
+      "What is your age? 46\n",
+      "All is well!\n",
+      "Do you want a photo taken? Y or N. \n",
+      "Y\n",
+      "Please pay $3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welcome to the rollercoaster!\")\n",
+    "height = int(input(\"What is your height in cm? \\n\"))\n",
+    "\n",
+    "bill = 0\n",
+    "if height >= 120:\n",
+    "    age = int(input(\"What is your age? \"))\n",
+    "    if age >= 45 and age <= 55:\n",
+    "        print(\"All is well!\")\n",
+    "    elif age > 18:\n",
+    "        bill = 12\n",
+    "        print(\"Adult tickest are $12\")\n",
+    "    elif age >= 12 and age <= 18:\n",
+    "        bill = 7\n",
+    "        print(\"Youth tickets are $7\")\n",
+    "    else:\n",
+    "        bill = 5\n",
+    "        print(\"Child tickets are $5\")\n",
+    "    \n",
+    "    wants_photo = input(\"Do you want a photo taken? Y or N. \\n\")\n",
+    "    if wants_photo == 'Y':\n",
+    "       bill += 3\n",
+    "       print(f\"Please pay ${bill}\")\n",
+    "    else:\n",
+    "        bill\n",
+    "        print(f\"Please pay ${bill}\")\n",
+    "else:\n",
+    "    print(\"Go eat some auxins!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c2e8036",
+   "metadata": {},
+   "source": [
+    "###### Love Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "caa8bab1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the love calculator!\n",
+      "What is your name? \n",
+      "Brian Kipkemboi\n",
+      "What is their name? \n",
+      "Vera Mogusu\n",
+      "Your score is 65\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welcome to the love calculator!\")\n",
+    "name1 = input(\"What is your name? \\n\").lower()\n",
+    "name2 = input(\"What is their name? \\n\").lower()\n",
+    "\n",
+    "combined_string = name1 + name2\n",
+    "lower_case_String = combined_string.lower()\n",
+    "t = lower_case_String.count('t')\n",
+    "r = lower_case_String.count('r')\n",
+    "u = lower_case_String.count('u')\n",
+    "e = lower_case_String.count('e')\n",
+    "\n",
+    "true = t + r + u + e\n",
+    "\n",
+    "l = lower_case_String.count('l')\n",
+    "o = lower_case_String.count('o')\n",
+    "v = lower_case_String.count('v')\n",
+    "e = lower_case_String.count('e')\n",
+    "\n",
+    "love = l + o + v + e\n",
+    "love_score = int(str(true) + str(love))\n",
+    "if love_score < 10 or love_score > 90:\n",
+    "    print(f\"Your love score is {love_score}, you go together like coke and mentos.\")\n",
+    "elif love_score >= 40 and love_score <= 50:\n",
+    "    print(f\"Your score is {love_score}, you are alright together.\")\n",
+    "else:\n",
+    "    print(f\"Your score is {love_score}.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79f7429a",
+   "metadata": {},
+   "source": [
+    "###### Treasure Island"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "746ea432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*******************************************************************************\n",
+      "          |                   |                  |                     |\n",
+      " _________|________________.=\"\"_;=.______________|_____________________|_______\n",
+      "|                   |  ,-\"_,=\"\"     `\"=.|                  |\n",
+      "|___________________|__\"=._o`\"-._        `\"=.______________|___________________\n",
+      "          |                `\"=._o`\"=._      _`\"=._                     |\n",
+      " _________|_____________________:=._o \"=._.\"_.-=\"'\"=.__________________|_______\n",
+      "|                   |    __.--\" , ; `\"=._o.\" ,-\"\"\"-._ \".   |\n",
+      "|___________________|_._\"  ,. .` ` `` ,  `\"-._\"-._   \". '__|___________________\n",
+      "          |           |o`\"=._` , \"` `; .\". ,  \"-._\"-._; ;              |\n",
+      " _________|___________| ;`-.o`\"=._; .\" ` '`.\"\\` . \"-._ /_______________|_______\n",
+      "|                   | |o;    `\"-.o`\"=._``  '` \" ,__.--o;   |\n",
+      "|___________________|_| ;     (#) `-.o `\"=.`_.--\"_o.-; ;___|___________________\n",
+      "____/______/______/___|o;._    \"      `\".o|o_.--\"    ;o;____/______/______/____\n",
+      "/______/______/______/_\"=._o--._        ; | ;        ; ;/______/______/______/_\n",
+      "____/______/______/______/__\"=._o--._   ;o|o;     _._;o;____/______/______/____\n",
+      "/______/______/______/______/____\"=._o._; | ;_.--\"o.--\"_/______/______/______/_\n",
+      "____/______/______/______/______/_____\"=.o|o_.--\"\"___/______/______/______/____\n",
+      "/______/______/______/______/______/______/______/______/______/______/_____ /\n",
+      "*******************************************************************************\n",
+      "\n",
+      "Welcome to Treasure Island.\n",
+      "Your mission is to find the treasure.\n",
+      "You're at a cross road. Where do you want to go? Type 'left' or 'right' \n",
+      "left\n",
+      "You come to a lake. There is an island in the middle of the lake. Type 'wait' to wait for a boat. Type 'swim' to swim across.wait\n",
+      "You arrive at the island unharmed. There is a house with 3 doors. one red, one yellow and one blue. Which color do you choose?yellow\n",
+      "You found the treasure! You Win!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('''\n",
+    "*******************************************************************************\n",
+    "          |                   |                  |                     |\n",
+    " _________|________________.=\"\"_;=.______________|_____________________|_______\n",
+    "|                   |  ,-\"_,=\"\"     `\"=.|                  |\n",
+    "|___________________|__\"=._o`\"-._        `\"=.______________|___________________\n",
+    "          |                `\"=._o`\"=._      _`\"=._                     |\n",
+    " _________|_____________________:=._o \"=._.\"_.-=\"'\"=.__________________|_______\n",
+    "|                   |    __.--\" , ; `\"=._o.\" ,-\"\"\"-._ \".   |\n",
+    "|___________________|_._\"  ,. .` ` `` ,  `\"-._\"-._   \". '__|___________________\n",
+    "          |           |o`\"=._` , \"` `; .\". ,  \"-._\"-._; ;              |\n",
+    " _________|___________| ;`-.o`\"=._; .\" ` '`.\"\\` . \"-._ /_______________|_______\n",
+    "|                   | |o;    `\"-.o`\"=._``  '` \" ,__.--o;   |\n",
+    "|___________________|_| ;     (#) `-.o `\"=.`_.--\"_o.-; ;___|___________________\n",
+    "____/______/______/___|o;._    \"      `\".o|o_.--\"    ;o;____/______/______/____\n",
+    "/______/______/______/_\"=._o--._        ; | ;        ; ;/______/______/______/_\n",
+    "____/______/______/______/__\"=._o--._   ;o|o;     _._;o;____/______/______/____\n",
+    "/______/______/______/______/____\"=._o._; | ;_.--\"o.--\"_/______/______/______/_\n",
+    "____/______/______/______/______/_____\"=.o|o_.--\"\"___/______/______/______/____\n",
+    "/______/______/______/______/______/______/______/______/______/______/_____ /\n",
+    "*******************************************************************************\n",
+    "''')\n",
+    "print(\"Welcome to Treasure Island.\")\n",
+    "print(\"Your mission is to find the treasure.\") \n",
+    "choice1 = input(\"You\\'re at a cross road. Where do you want to go? Type 'left' or 'right' \\n\").lower()\n",
+    "\n",
+    "if choice1 == \"left\":\n",
+    "    choose2 = input(\"You come to a lake. There is an island in the middle of the lake. Type 'wait' to wait for a boat. Type 'swim' to swim across.\\n\").lower()\n",
+    "    if choose2 == 'wait':\n",
+    "        choice3 = input('You arrive at the island unharmed. There is a house with 3 doors. one red, one yellow and one blue. Which color do you choose?\\n').lower()\n",
+    "        if choice3  == 'blue':\n",
+    "            print(\"You enter a room of beasts. Game Over.\")\n",
+    "        elif choice3  == 'red':\n",
+    "            print(\"It's a room full of fire. Game Over.\")\n",
+    "        elif choice3  == 'yellow':\n",
+    "            print(\"You found the treasure! You Win!\")\n",
+    "        else:\n",
+    "            print('Please enter a valid color!')\n",
+    "    else:\n",
+    "        print('Game Over!')\n",
+    "else:\n",
+    "    print('Game Over!')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9bae71e",
+   "id": "771d734f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,7 +828,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -369,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
