--- a/100 Days of coding.ipynb
+++ b/100 Days of coding.ipynb
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bd2a29c6",
+   "id": "1f366c58",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "efabdaba",
+   "id": "55914864",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c808299",
+   "id": "9967cbea",
    "metadata": {},
    "source": [
     "###### Pizza Order"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0a335d87",
+   "id": "fd0481c5",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169a1535",
+   "id": "30cb2f74",
    "metadata": {},
    "source": [
     "###### Logical Operators"
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b9c2c890",
+   "id": "b36fc8e0",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2e8036",
+   "id": "a0a771df",
    "metadata": {},
    "source": [
     "###### Love Calculator"
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "caa8bab1",
+   "id": "7a747c29",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f7429a",
+   "id": "136ae782",
    "metadata": {},
    "source": [
     "###### Treasure Island"
@@ -732,8 +732,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "746ea432",
+   "execution_count": 45,
+   "id": "991ed231",
    "metadata": {},
    "outputs": [
     {
@@ -766,8 +766,10 @@
       "Your mission is to find the treasure.\n",
       "You're at a cross road. Where do you want to go? Type 'left' or 'right' \n",
       "left\n",
-      "You come to a lake. There is an island in the middle of the lake. Type 'wait' to wait for a boat. Type 'swim' to swim across.wait\n",
-      "You arrive at the island unharmed. There is a house with 3 doors. one red, one yellow and one blue. Which color do you choose?yellow\n",
+      "You come to a lake. There is an island in the middle of the lake. Type 'wait' to wait for a boat. Type 'swim' to swim across.\n",
+      "wait\n",
+      "You arrive at the island unharmed. There is a house with 3 doors. one red, one yellow and one blue. Which color do you choose?\n",
+      "yellow\n",
       "You found the treasure! You Win!\n"
      ]
     }
@@ -818,9 +820,365 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14cde813",
+   "metadata": {},
+   "source": [
+    "###### Randomisation and Python Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "3f6c1976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "7168fea6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_integer = random.randint(1, 10)\n",
+    "random_integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "ce1dc8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7106546819276114\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_float = random.random()\n",
+    "rand_on = random_float * 5\n",
+    "print(rand_on)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad95e3a3",
+   "metadata": {},
+   "source": [
+    "###### Head or Tail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "6e306485",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tails\n"
+     ]
+    }
+   ],
+   "source": [
+    "choice = random.randint(1,2)\n",
+    "if choice == 1:\n",
+    "    print('Heads')\n",
+    "else:\n",
+    "    print(\"Tails\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "669b4de1",
+   "metadata": {},
+   "source": [
+    "###### Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b914fdc",
+   "metadata": {},
+   "source": [
+    "### Banker Roullette"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "af663fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give me everybody's names, separated by a comma. \n",
+      " Brian, Jnae, Kim, Hum\n",
+      "Jnae is going to buy the meal today!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the random module here\n",
+    "import random\n",
+    "# Split string method\n",
+    "names_string = input(\"Give me everybody's names, separated by a comma. \\n \")\n",
+    "names = names_string.split(\", \")\n",
+    "# 🚨 Don't change the code above 👆\n",
+    "\n",
+    "#Write your code below this line 👇\n",
+    "\n",
+    "#Get the total number of items in list.\n",
+    "num_items = len(names)\n",
+    "#Generate random numbers between 0 and the last index. \n",
+    "random_choice = random.randint(0, num_items - 1)\n",
+    "#Pick out random person from list of names using the random number.\n",
+    "person_who_will_pay = names[random_choice]\n",
+    "\n",
+    "print(person_who_will_pay + \" is going to buy the meal today!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7266d6a",
+   "metadata": {},
+   "source": [
+    "###### Nested lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3a15bd71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Strawberries', 'Nectarines', 'Apples', 'Grapes', 'Peaches', 'Cherries', 'Melons', 'Lemons']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"Strawberries\", \"Nectarines\", \"Apples\", \"Grapes\", \"Peaches\", \"Cherries\", \"Pears\"]\n",
+    "fruits[-1] = \"Melons\"\n",
+    "fruits.append(\"Lemons\")\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67c8e62",
+   "metadata": {},
+   "source": [
+    "###### Treasure Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "43cfb8df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['⬜️', '️⬜️', '️⬜️']\n",
+      "['⬜️', '⬜️', '️⬜️']\n",
+      "['⬜️️', '⬜️️', '⬜️️']\n",
+      "Where do you want to put the treasure? 23\n",
+      "['⬜️', '️⬜️', '️⬜️']\n",
+      "['⬜️', '⬜️', '️⬜️']\n",
+      "['⬜️️', 'X', '⬜️️']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 🚨 Don't change the code below 👇\n",
+    "row1 = [\"⬜️\",\"️⬜️\",\"️⬜️\"]\n",
+    "row2 = [\"⬜️\",\"⬜️\",\"️⬜️\"]\n",
+    "row3 = [\"⬜️️\",\"⬜️️\",\"⬜️️\"]\n",
+    "map = [row1, row2, row3]\n",
+    "print(f\"{row1}\\n{row2}\\n{row3}\")\n",
+    "position = input(\"Where do you want to put the treasure? \")\n",
+    "# 🚨 Don't change the code above 👆\n",
+    "\n",
+    "#Write your code below this row 👇\n",
+    "horizontal = int(position[0])\n",
+    "vertical = int(position[1])\n",
+    "\n",
+    "selected_row = map[vertical - 1]\n",
+    "selected_row[horizontal -1] = 'X'\n",
+    "\n",
+    "#Write your code above this row 👆\n",
+    "\n",
+    "# 🚨 Don't change the code below 👇\n",
+    "print(f\"{row1}\\n{row2}\\n{row3}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "629f2575",
+   "metadata": {},
+   "source": [
+    "###### Rock Paper Scissors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "89625472",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What do you choose? Type 0 for Rock, 1 for Paper or 2 for Scissors.\n",
+      "1\n",
+      "\n",
+      "    _______\n",
+      "---'   ____)____\n",
+      "          ______)\n",
+      "          _______)\n",
+      "         _______)\n",
+      "---.__________)\n",
+      "\n",
+      "Computer chose:\n",
+      "\n",
+      "    _______\n",
+      "---'   ____)____\n",
+      "          ______)\n",
+      "       __________)\n",
+      "      (____)\n",
+      "---.__(___)\n",
+      "\n",
+      "You lose\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "rock = '''\n",
+    "    _______\n",
+    "---'   ____)\n",
+    "      (_____)\n",
+    "      (_____)\n",
+    "      (____)\n",
+    "---.__(___)\n",
+    "'''\n",
+    "\n",
+    "paper = '''\n",
+    "    _______\n",
+    "---'   ____)____\n",
+    "          ______)\n",
+    "          _______)\n",
+    "         _______)\n",
+    "---.__________)\n",
+    "'''\n",
+    "\n",
+    "scissors = '''\n",
+    "    _______\n",
+    "---'   ____)____\n",
+    "          ______)\n",
+    "       __________)\n",
+    "      (____)\n",
+    "---.__(___)\n",
+    "'''\n",
+    "game_images = [rock, paper, scissors]\n",
+    "\n",
+    "user_choice = int(input(\"What do you choose? Type 0 for Rock, 1 for Paper or 2 for Scissors.\\n\"))\n",
+    "if user_choice >= 3 or user_choice < 0: \n",
+    "  print(\"You typed an invalid number, you lose!\") \n",
+    "else:\n",
+    "  print(game_images[user_choice])\n",
+    "\n",
+    "  computer_choice = random.randint(0, 2)\n",
+    "  print(\"Computer chose:\")\n",
+    "  print(game_images[computer_choice])\n",
+    "\n",
+    "  if user_choice == 0 and computer_choice == 2:\n",
+    "    print(\"You win!\")\n",
+    "  elif computer_choice == 0 and user_choice == 2:\n",
+    "    print(\"You lose\")\n",
+    "  elif computer_choice > user_choice:\n",
+    "    print(\"You lose\")\n",
+    "  elif user_choice > computer_choice:\n",
+    "    print(\"You win!\")\n",
+    "  elif computer_choice == user_choice:\n",
+    "    print(\"It's a draw\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2d51aad",
+   "metadata": {},
+   "source": [
+    "###### For Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f34f319b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "Peach\n",
+      "Pear\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['Apple', 'Peach', 'Pear']\n",
+    "\n",
+    "for fruit in fruits:\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5998ccd",
+   "metadata": {},
+   "source": [
+    "###### Average Height"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771d734f",
+   "id": "aeda3df8",
    "metadata": {},
    "outputs": [],
    "source": []
